--- a/config/laravel.conf
+++ b/config/laravel.conf
@@ -15,6 +15,7 @@ server {
         fastcgi_pass unix://run/php/php5.6-fpm.sock;
         fastcgi_index index.php;
         include fastcgi_params;
+        fastcgi_param HTTPS $fe_https;
         fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
         fastcgi_intercept_errors off;
         fastcgi_buffer_size 16k;
