--- a/config/nginx.conf
+++ b/config/nginx.conf
@@ -50,6 +50,11 @@ http {
     # Virtual Host Configs
     ##
 
+    map $http_x_forwarded_proto $fe_https {
+        default off;
+        https on;
+    }
+
     include /etc/nginx/conf.d/*.conf;
     include /etc/nginx/sites-enabled/*;
 }
