--- a/config/nginx.conf
+++ b/config/nginx.conf
@@ -55,6 +55,6 @@ http {
         https on;
     }
 
-    include /etc/nginx/conf.d/*.conf;
+    #include /etc/nginx/conf.d/*.conf;
     include /etc/nginx/sites-enabled/*;
 }
