--- a/config/nginx.conf
+++ b/config/nginx.conf
@@ -1,60 +1,56 @@
 user www-data;
-worker_processes 1;
+worker_processes 2;
 pid /run/nginx.pid;
-#daemon off;
 
 events {
-    worker_connections 768;
-    # multi_accept on;
+        worker_connections 768;
+        multi_accept on;
+        use epoll;
 }
 
 http {
 
-    ##
-    # Basic Settings
-    ##
+        ##
+        # Basic Settings
+        ##
+        server_tokens off;
+        sendfile on;
+        tcp_nopush on;
+        tcp_nodelay on;
+        keepalive_timeout 65;
+        types_hash_max_size 2048;
+        client_max_body_size 50M;
+        client_body_buffer_size 1m;
+        # server_tokens off;
 
-    sendfile off;
-    tcp_nopush on;
-    tcp_nodelay on;
-    keepalive_timeout 65;
-    types_hash_max_size 2048;
-    # server_tokens off;
+        # server_names_hash_bucket_size 64;
+        # server_name_in_redirect off;
 
-    # server_names_hash_bucket_size 64;
-    # server_name_in_redirect off;
+        include /etc/nginx/mime.types;
+        default_type application/octet-stream;
 
-    include /etc/nginx/mime.types;
-    default_type application/octet-stream;
+        ##
+        # Logging Settings
+        ##
 
-    ##
-    # Logging Settings
-    ##
-    access_log off;
+        access_log off;
+        error_log /var/log/nginx/error.log;
 
-    ##
-    # Gzip Settings
-    ##
+        ##
+        # Gzip Settings
+        ##
 
-    gzip on;
-    gzip_disable "msie6";
+        gzip off;
 
-    # gzip_vary on;
-    # gzip_proxied any;
-    # gzip_comp_level 6;
-    # gzip_buffers 16 8k;
-    # gzip_http_version 1.1;
-    # gzip_types text/plain text/css application/json application/javascript text/xml application/xml application/xml+rss text/javascript;
+        ##
+        # Virtual Host Configs
+        ##
 
-    ##
-    # Virtual Host Configs
-    ##
+        map $http_x_forwarded_proto $fe_https {
+            default off;
+            https on;
+        }
 
-    map $http_x_forwarded_proto $fe_https {
-        default off;
-        https on;
-    }
-
-    #include /etc/nginx/conf.d/*.conf;
-    include /etc/nginx/sites-enabled/*;
+        #include /etc/nginx/conf.d/*.conf;
+        include /etc/nginx/sites-enabled/*;
 }
